syntax = "proto3";

package dfs;

service Master {
  rpc GetChunkServerAddress(PingRequest) returns (ChunkServerAddress) {}
}

service Chunk {
  rpc Ping(PingRequest) returns (PingResponse) {}
}

message PingRequest {
  string message = 1;
}

message ChunkServerAddress {
  string address = 1;
}

message PingResponse {
  string message = 1;
}